# price-monitor-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
price_monitor/: __init__.py  __main__.py  core.py  diff.py  models.py  parse.py
tests/: test_price_monitor.py
