[project]
name = "price-monitor-py"
version = "1.0.0"
description = "Portfolio demo: async web-scraping price/stock monitor with change-detection (Python)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matthew Daly" }]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
price-monitor = "price_monitor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["price_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
